--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -22,6 +22,26 @@
   cursor: grabbing;
 }
 
+.scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: rgb(242, 243, 222);
+  border-radius: 8px;
+}
+
+/* The handle (thumb you drag) */
+.scroll::-webkit-scrollbar-thumb {
+  background: rgb(79, 102, 56);
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+.scroll::-webkit-scrollbar-thumb:hover {
+  background: rgb(67, 94, 40);
+}
+
 
 
 
