--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -86,3 +86,18 @@ body {
   transition-duration: 1s !important; /* adjust 1s to your desired duration */
   transition-timing-function: ease;  /* or any easing you like */
 }
+
+
+:root {
+  --left: 0vw;
+  --width: 100vw;
+}
+
+@media (min-width: 576px) {
+  .navbar {
+    position: fixed;
+    top: 15px;
+    left: var(--left);
+    width: var(--width);
+  }
+}
